update photo gallery

--- a/app/views/sites/admin.html.erb
+++ b/app/views/sites/admin.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <p class="text-end"><a href="<%= login_path %>">Back to login</a></p>
+  <p class="text-end"><a href="<%= logout_path %>">Logout</a></p>
   <%= render 'sites/admin/guests' %>
 </div>
