--- a/app/views/sites/main/_details.html.erb
+++ b/app/views/sites/main/_details.html.erb
@@ -1,5 +1,5 @@
 <!-- Welcome photo -->
-<img class="img-fluid" src="/assets/DSC_9398.jpeg" />
+<img class="img-fluid" src="/assets/intro-<%= rand(1..4) %>.jpeg" />
 
 <div class="m-4"></div>
 <!-- The big day -->
