--- a/app/views/sites/main/_gallery.html.erb
+++ b/app/views/sites/main/_gallery.html.erb
@@ -11,6 +11,44 @@
   </div>
 
   <div class="row py-4">
+    <div class="col"><img src="assets/gallery/DSC_1917.jpeg" class="img-fluid rounded poppable my-2" title="Fun in New Hope"/></div>
+
+    <div class="col">
+      <img src="assets/gallery/DSC_001.jpg" class="img-fluid rounded poppable my-2" title="Fun in New Hope"/>
+      <img src="assets/gallery/DSC_2103.jpeg" class="img-fluid rounded poppable my-2" title="Fun in New Hope"/>
+    </div>
+  </div>
+
+  <div class="row py-4">
+    <div class="col">
+      <img src="assets/gallery/DSC_2044.jpeg" class="img-fluid rounded poppable my-2" title="Fun in New Hope"/>
+    </div>
+    <div class="col">
+      <img src="assets/gallery/DSC_2056.jpeg" class="img-fluid rounded poppable my-2" title="Fun in New Hope"/>
+    </div>
+  </div>
+
+  <div class="row py-4">
+    <div class="col-sm">
+      <img src="assets/gallery/DSC_2274.jpg" class="img-fluid rounded poppable my-2" title="Fun in New Hope"/>
+    </div>
+    <div class="col-sm">
+      <img src="assets/gallery/DSC_2180.jpeg" class="img-fluid rounded poppable my-2" title="Fun in New Hope"/>
+    </div>
+    <div class="col-sm">
+      <img src="assets/gallery/DSC_2189.jpeg" class="img-fluid rounded poppable my-2" title="Fun in New Hope"/>
+    </div>
+  </div>
+
+  <div class="row py-4">
+    <div class="col">
+      <img src="assets/gallery/DSC_2131.jpeg" class="img-fluid rounded poppable my-2" title="Fun in New Hope"/>
+      <img src="assets/gallery/DSC_2344.jpg" class="img-fluid rounded poppable my-2" title="Fun in New Hope"/>
+    </div>
+    <div class="col"><img src="assets/gallery/DSC_2364.jpg" class="img-fluid rounded poppable my-2" title="Fun in New Hope"/></div>
+  </div>
+
+  <div class="row py-4">
     <div class="col-4">
       <img src="assets/gallery/Angela_N_Ryan_Edit-9718.jpg" class="img-fluid rounded poppable my-2" title="Beach day in January!"/>
       <img src="assets/gallery/DSC_9378.jpg" class="img-fluid rounded poppable my-2" title="Beach day in January!"/>
