--- a/app/views/sites/main/_venue.html.erb
+++ b/app/views/sites/main/_venue.html.erb
@@ -16,6 +16,8 @@
       <h4>4:30 pm - 11:00 pm</h4>
     </div>
 
+    <p>Doors open at 4:00 pm</p>
+
     <p>Please arrive by 4:15 pm</p>
 
     <p>Attire: Formal Wedding Attire</p>
