first two rounds on us

--- a/app/views/sites/main/_welcome-party.html.erb
+++ b/app/views/sites/main/_welcome-party.html.erb
@@ -21,7 +21,7 @@
 
     <p>Attire: Your party clothes!</p>
 
-    <p>Join us the night before the wedding as we kick off the weekend with some drinks and small bites!</p>
+    <p>Join us the night before the wedding as we kick off the weekend. Small bites will be provided and the first two round of drinks are on us!</p>
 
     <p>Just a 6 minute walk from the <a href="https://goo.gl/maps/dWuCC8f8akRWu5Cm9" target="_blank">Loews Hotel</a>.</p>
   </div>
