until rooms are gone

--- a/app/views/sites/main/_travel.html.erb
+++ b/app/views/sites/main/_travel.html.erb
@@ -12,7 +12,7 @@
     </address>
   </div>
   <div class="col-6 align-self-center">
-    <p><small>A limited number of rooms have been reserved at a special rate for this occasion. Click the link below to book your room or call 888-575-6397 and mention the Quiceno/Tulino wedding. These rates are available until November 1st.</small></p>
+    <p><small>A limited number of rooms have been reserved at a special rate for this occasion. Click the link below to book your room or call 888-575-6397 and mention the Quiceno/Tulino wedding. These rates are available until November 1st or until rooms run out.</small></p>
     <p><small>On-site valet parking available for $45/night. There are public parking garages in the vicinity of the hotel for slightly cheaper rates.</small></p>
     <a href="https://www.loewshotels.com/philadelphia-hotel/quiceno-tulino-wedding" target="_blank" class="btn btn-lg btn-info">Click here to book!</a>
   </div>
