--- a/app/views/guests/seating_chart.html.erb
+++ b/app/views/guests/seating_chart.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <p class="text-end"><a href="<%= sites_path %>">Main Dashboard</a> | <a href="<%= logout_path %>">Logout</a></p>
+  <p class="text-end"><a href="<%= sites_path %>">Guest List</a> | <a href="<%= logout_path %>">Logout</a></p>
   <% table_layout.each do |layout| %>
     <div class="row">
       <% layout.each do |table_no| %>
