--- a/app/views/guests/placecards.html.erb
+++ b/app/views/guests/placecards.html.erb
@@ -1,6 +1,6 @@
 <% Guest.where(status: [true, nil]).order(table: :asc).in_groups_of(6).map do |group| %>
     <%= group.compact.map do |guest| %>
-      <% "#{guest.first_name},#{guest.last_name}" %>
+      <% "#{guest.first_name.upcase},#{guest.last_name.downcase}" %>
     <% end.join(',') %>
   <br/>
 <% end %>
