--- a/app/views/sites/main/_venue.html.erb
+++ b/app/views/sites/main/_venue.html.erb
@@ -24,7 +24,7 @@
 
     <p>The ceremony, cocktail hour, and reception will take place indoors at World Cafe Live.</p>
 
-    <p>There is metered street parking available or a nearby <a href="https://goo.gl/maps/wRj29GpKFUR8VV2Z6" target="_blank">parking lot</a> and <a href="https://goo.gl/maps/hh4quEcbJxFXgXTr6" target="_blank">covered garage</a> for a fee.</p>
+    <p>There is metered street parking available or a <a href="https://goo.gl/maps/hh4quEcbJxFXgXTr6" target="_blank">nearby garage</a> for a fee.</p>
   </div>
   <div class="col-lg-5 d-flex align-items-center">
     <img class="w-100 mb-4" src="/assets/WCL.jpeg" />
