--- a/app/views/sites/main/_travel.html.erb
+++ b/app/views/sites/main/_travel.html.erb
@@ -12,9 +12,20 @@
     </address>
   </div>
   <div class="col-6 align-self-center">
-    <p><small>A limited number of rooms have been reserved at a special rate for this occasion. Click the link below to book your room or call 888-575-6397 and mention the Quiceno/Tulino wedding. These rates are available until November 1st or until rooms run out.</small></p>
-    <p><small>On-site valet parking available for $45/night. There are public parking garages in the vicinity of the hotel for slightly cheaper rates.</small></p>
-    <a href="https://www.loewshotels.com/philadelphia-hotel/quiceno-tulino-wedding" target="_blank" class="btn btn-lg btn-info">Click here to book!</a>
+    <p><small>On-site valet parking available for $45/night.</small></p>
+    <p><small>There are public parking garages in the vicinity of the hotel for slightly cheaper rates, we recommend reserving parking ahead of time through the <a href="https://www.parkwhiz.com/parking-app/" target="_blank">ParkWhiz app</a>.</small></p>
+  </div>
+
+  <div class="m-4"></div>
+  <!-- SHUTTLE -->
+  <div class="col-6 border-end align-self-center">
+    <svg xmlns="http://www.w3.org/2000/svg" aria-labelledby="Shuttle417" role="img" class="zui-svg-icon" viewBox="0 0 64 64" color="currentColor" fill="currentColor" style="width: 70px; height: 70px;"><title id="Shuttle417">Shuttle</title><g transform="translate(8 7)" stroke="currentColor" fill="none" fill-rule="evenodd"><path d="M3.774 9c0-4.97 4.038-9 9.003-9h22.56c4.972 0 9.003 4.038 9.003 9v36.283H3.774V9.001Z"></path><rect x="6.604" y="10.377" width="34.906" height="20.755" rx="1"></rect><path stroke-linejoin="round" d="M0 13.208h3.774v10.377H0zM44.34 13.208h3.774v10.377H44.34z"></path><path stroke-linecap="round" d="M24.354 10.783v7.157l-5.41 8.034"></path><rect x="35.849" y="34.906" width="5.66" height="5.66" rx="1"></rect><rect x="6.604" y="34.906" width="5.66" height="5.66" rx="1"></rect><path d="M16.51 36.32h15.094M16.51 39.15h15.094" stroke-linecap="round"></path><path d="M33.962 45.283h5.66v2.359A2.366 2.366 0 0 1 37.256 50h-.925a2.357 2.357 0 0 1-2.368-2.358v-2.359ZM8.49 45.283h5.66v2.359A2.366 2.366 0 0 1 11.784 50h-.925a2.357 2.357 0 0 1-2.367-2.358v-2.359Z"></path></g></svg>
+    <p>Shuttle</p>
+    <h3>HOTEL TRANSPORTATION</h3>
+  </div>
+  <div class="col-6 align-self-center">
+    <p><small><strong>Transportation will be provided to and from the hotel.</strong></small></p>
+    <p><small>A bus will shuttle guest to the venue and uber vouchers will be provided for guest to travel back to the hotel. Bus pick-up time and uber vouchers will be provided at the welcome party. If hotel guest can’t make it to the welcome party, please contact the bride or groom for this information.</small></p>
   </div>
 
   <div class="m-4"></div>
